--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,19 @@
 <!doctype html>
-<html>
+<html style="background-color: black;">
+
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="./assets/main.js"></script>
 </head>
 
 <body>
-  <div class="relative bg-white overflow-hidden">
-    <div class="max-w-7xl mx-auto">
-      <div class="relative z-10 pb-8 bg-white sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
-        <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-white transform translate-x-1/2"
+  <div class="relative bg-black overflow-hidden">
+    <div class="max-w-7xl  mx-auto"> 
+      <div class="relative z-10 pb-8 bg-black sm:pb-16 md:pb-20 lg:max-w-2xl lg:w-full lg:pb-28 xl:pb-32">
+        <svg class="hidden lg:block absolute right-0 inset-y-0 h-full w-48 text-black transform translate-x-1/2"
           fill="currentColor" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true">
           <polygon points="50,0 100,0 50,100 0,100" />
         </svg>
@@ -22,14 +24,14 @@
                 <div class="flex items-center justify-between w-full md:w-auto">
                   <a href="#">
                     <span class="sr-only">Title</span>
-                    <img class="h-8 w-auto sm:h-10" src="https://tailwindui.com/img/logos/workflow-mark-indigo-600.svg">
+                    <img class="h-8 w-auto sm:h-10" src="https://cdn-icons-png.flaticon.com/512/1232/1232994.png" style="transform: scale(2);">
                   </a>
                 </div>
               </div>
               <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-                <a href="#" class="font-medium text-gray-500 hover:text-gray-900">About</a>
-                <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Projects</a>
-                <a href="#" class="font-medium text-gray-500 hover:text-gray-900">Contact</a>
+                <a href="#" class="font-medium text-gray-400 hover:text-gray-100">About</a>
+                <a href="#" class="font-medium text-gray-400 hover:text-gray-100">Projects</a>
+                <a href="#" class="font-medium text-gray-400 hover:text-gray-100">Contact</a>
               </div>
             </nav>
           </div>
@@ -37,25 +39,28 @@
 
         <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
           <div class="sm:text-center lg:text-left">
-            <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-              <span class="block xl:inline">Name</span>
-              <span class="block text-indigo-600 xl:inline">@handle</span>
+            <h1 class="text-4xl tracking-tight font-extrabold text-gray-300 sm:text-5xl md:text-6xl">
+              <span class="block xl:inline">Angel David Revilla</span>
+              <span class="block text-red-600 xl:inline">@DrossRotzank</span>
             </h1>
             <p
-              class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-              Description</p>
+              class="mt-3 text-base text-gray-300 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+              DrossRotzank es el canal dedicado a horror, misterios y conspiraciones más grande y visto del mundo. Con más de 5.600'000.000📈 (cinco mil millones de visualizaciones) no tiene parangón en Internet. Míralo. Sé que te va a gustar.</p>
+              <p
+              class="mt-3 text-base text-gray-100 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
+Te ha hablado Dross y te deseo... Buenas noches. <br> 🕸👽🕸☠🕸💀🕸🕷🕸⚰🕸🪦🕸</p>
           </div>
         </main>
       </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
       <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full"
-        src="https://ui-avatars.com/api/?background=0D8ABC&color=fff" alt="">
+        src="https://elcomercio.pe/resizer/XePQiGQ31VjHskD0WKBh8VN1nf0=/980x0/smart/filters:format(jpeg):quality(75)/arc-anglerfish-arc2-prod-elcomercio.s3.amazonaws.com/public/F7BUWU55YVERFG3L4URLTOQ34A.jpg" alt="">
     </div>
   </div>
-  <div class="bg-white">
+  <div class="bg-black">
     <div class="max-w-2xl mx-auto py-16 px-4 sm:py-24 sm:px-6 lg:max-w-7xl lg:px-8">
-      <h2 class="text-2xl font-extrabold tracking-tight text-gray-900">Last YouTube Videos</h2>
+      <h2 class="text-2xl font-extrabold tracking-tight text-gray-400">Last YouTube Videos</h2>
       <div class="mt-6 grid grid-cols-1 gap-y-10 gap-x-6 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
         <!-- content -->
          <div class="group relative">
@@ -73,11 +78,11 @@
       </div>
     </div>
   </div>
-  <div class="bg-gray-50">
-    <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-      <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+  <div class="bg-black">
+    <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between bg-black ">
+      <h2 class="text-3xl font-extrabold tracking-tight text-gray-500 sm:text-4xl">
         <span class="block">Contact</span>
-        <span class="block text-indigo-600">keep in touch.</span>
+        <span class="block text-red-800">keep in touch.</span>
       </h2>
       <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
         <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="48" height="48" viewBox="0 0 48 48"
