--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
                 <div class="flex items-center justify-between w-full md:w-auto">
                   <a href="#">
-                    <span class="sr-only">Title</span>
+                    <span class="sr-only" style="color:aliceblue;">dross-o-rama</span>
                     <img class="h-8 w-auto sm:h-10" src="https://cdn-icons-png.flaticon.com/512/1232/1232994.png" style="transform: scale(2);">
                   </a>
                 </div>
